# projeto-simulacao-opiniao-publica

./: .gitignore  Makefile  README.md  simulacao-opiniao-publica.ipynb
docs/: presentation.html  (+1 more)
llm_experiments/: .gitignore  config.yaml  pyproject.toml
llm_experiments/analysis/: percepcao_democracia_analysis.py
llm_experiments/assets/: gabarito_cesop.jsonl
llm_experiments/assets/batches/: political_priorities.jsonl  political_priorities_with_selected_features.jsonl  political_priorities_with_selected_features_v2.jsonl
llm_experiments/assets/feature_selection/: feature_selection_fake_news.json  feature_selection_political_participation.json  feature_selection_political_priorities.json
llm_experiments/assets/personas/: prompt_evaluations.jsonl
llm_experiments/assets/prompts/: feature_selection_political_priorities.yaml  political_priorities.yaml  political_priorities_with_selected_features_v1.yaml  political_priorities_with_selected_features_v2.yaml  political_priorities_with_selected_features_v3.yaml  political_priorities_with_selected_features_v4.yaml
llm_experiments/assets/surveys/: survey_percepcao_democracia.yaml  survey_template.yaml
llm_experiments/assets/surveys_tests/: test_jurema.yaml  test_llama.yaml  test_maritaca_ai.yaml  test_percepcao_democracia.yaml  test_tucano.yaml
llm_experiments/docs/methodology/: backstories.md  execucao.md  inferencia.md
llm_experiments/src/: create_batch.py  create_personas.py  generate_gabarito_and_analyze.py  main.py  run_feature_selection.py  settings.py
llm_experiments/tests/: conftest.py  test_scripts.py
(+247 files in other folders)
